crates/test-ui/ui/nsarray_not_message.stderr
error[E0277]: the trait bound `i32: Message` is not satisfied
 --> ui/nsarray_not_message.rs
  |
  |     let _: Retained<NSArray<i32>> = NSArray::new();
  |                                     ^^^^^^^^^^^^^^ the trait `Message` is not implemented for `i32`
  |
  = help: the following other types implement trait `Message`:
            AnyClass
            AnyObject
            AnyProtocol
            Exception
            NSArray<ObjectType>
            NSConstantString
            NSCountedSet<ObjectType>
            NSDictionary<KeyType, ObjectType>
          and $N others
note: required by a bound in `NSArray::<ObjectType>::new`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/generated/NSArray.rs
  |
  | / extern_methods!(
  | |     /// Methods declared on superclass `NSObject`
  | |     unsafe impl<ObjectType: Message> NSArray<ObjectType> {
  | |         #[unsafe(method(new))]
  | |         #[unsafe(method_family = new)]
  | |         pub fn new() -> Retained<Self>;
  | |                --- required by a bound in this associated function
  | |     }
  | | );
  | |_^ required by this bound in `NSArray::<ObjectType>::new`
  = note: this error originates in the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Message` is not satisfied
 --> ui/nsarray_not_message.rs
  |
  |     let _: Retained<NSArray<Retained<NSObject>>> = NSArray::from_slice(&[&NSObject::new()]);
  |                                                    ------------------- ^^^^^^^^^^^^^^^^^^^ the trait `Message` is not implemented for `Retained<NSObject>`
  |                                                    |
  |                                                    required by a bound introduced by this call
  |
  = help: the following other types implement trait `Message`:
            AnyClass
            AnyObject
            AnyProtocol
            Exception
            NSArray<ObjectType>
            NSConstantString
            NSCountedSet<ObjectType>
            NSDictionary<KeyType, ObjectType>
          and $N others
note: required by a bound in `objc2_foundation::array::<impl NSArray<ObjectType>>::from_slice`
 --> $WORKSPACE/framework-crates/objc2-foundation/src/array.rs
  |
  | impl<ObjectType: Message> NSArray<ObjectType> {
  |                  ^^^^^^^ required by this bound in `objc2_foundation::array::<impl NSArray<ObjectType>>::from_slice`
...
  |     pub fn from_slice(slice: &[&ObjectType]) -> Retained<Self> {
  |            ---------- required by a bound in this associated function
